feat: create application TOTP

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,11 @@ build/
 
 ### VS Code ###
 .vscode/
+
+# profiles
+application-local.yml
+application-dev.yml
+application-uat.yml
+application-prod.yml
+src/main/resources/application-local.yml
+src/main/resources/application-local.yml
